--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,8 @@
-$body-color: red;
 
-body {
-  color: $body-color;
-  h1{
-    color: blue;
-  }
-}
+
+$color-orange: #e06e04;
+$color-blue: #5799ef;
+$color-white: white;
+$color-white-dark: #aeaeae;
+$color-orange-dure: #8d4502;
+
