--- a/src/style.scss
+++ b/src/style.scss
@@ -6,3 +6,81 @@ $color-white: white;
 $color-white-dark: #aeaeae;
 $color-orange-dure: #8d4502;
 
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
+/* styling navlist */
+#navlist {
+    background-color: $color-blue;
+    position: absolute;
+    width: 100%;
+}
+     
+/* styling navlist anchor element */
+#navlist a {
+    float:left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 15px;
+}
+ 
+.navlist-right{
+    float:right;
+}
+
+/* hover effect of navlist anchor element */
+#navlist a:hover {
+    background-color: $color-white-dark;
+    color: $color-orange-dure;
+}
+     
+/* styling search bar */
+.search input[type=text]{
+    width:300px;
+    height:25px;
+    border-radius:25px;
+    border: none;
+}
+     
+.search{
+    float:right;
+    margin:7px;
+}
+     
+.search button{
+    background-color: $color-blue;
+    color: #f2f2f2;
+    float: right;
+    padding: 5px 10px;
+    margin-right: 16px;
+    font-size: 12px;
+    border: none;
+    cursor: pointer;
+}
+
+
+footer {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 1rem;
+    position: fixed;
+    bottom: 0;
+    background-color: $color-white-dark;
+    z-index: 2;
+  
+    .link {
+      margin-left: 1rem;
+      color: $color-orange-dure;
+    }
+  }
+  
