--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,3 @@
-
-
 $color-orange: #e06e04;
 $color-blue: #5799ef;
 $color-white: white;
@@ -13,7 +11,6 @@ $color-orange-dure: #8d4502;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
 }
-
 
 /* styling navlist */
 #navlist {
@@ -77,64 +74,102 @@ footer {
     bottom: 0;
     background-color: $color-white-dark;
     z-index: 2;
-  
+
     .link {
       margin-left: 1rem;
       color: $color-orange-dure;
     }
   }
  
-// .reservation-body {
-//     width: 80vw;
-//     height: 90vh;
-//     border: 2px solid red;
-    
-//     position: fixed;
-//     // margin: auto auto;
-// background-color: green;
-//   left: 10%;
-//   bottom: 5%;
-// //   right: 10%;
-//   display: none;
-// //   z-index: 20;
-// //   backdrop-filter: blur(2px);
-//   }
 
-//   .reservation-body.active {
-//     display: block;
-//   }
+//   Reservation
+.reservation-body {
+    width: 70vw;
+    height: 120vh;
+    border: 2px solid red;
 
-//   .closeBTN {
-//     font-size: 40px;
-//     cursor: pointer;
 
-//   }
+    // position: fixed;
+    margin: auto auto;
+background-color: green;
+  left: 10%;
+  bottom: 5%;
+  display: none;
+//   z-index: 20;
+//   backdrop-filter: blur(2px);
+  }
 
-//   .closeBTNbody {
-//     position: fixed;
-//     top: 8%;
-//     right: 12%;
-//     border: 3px blue solid;
-//   }
+  .reservation-body.active {
+    display: block;
+  }
 
-//   .theImage {
-//     font-size: 300px;
-//   }
+  .closeBTN {
+    font-size: 40px;
+    cursor: pointer;
+  }
 
-//   .image-body{
-//     border: 4px solid yellow;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     height: 400px;
-//   }
+  .closeBTNbody {
+    position: fixed;
+    top: 10%;
+    right: 16%;
+    border: 3px blue solid;
+  }
 
-//   .under-space {
-//     width: 100%;background-color: #8d4502;
-//     display: flex;
-//     justify-content: space-around;
-//     align-items: center;
-//     border: #8d4502 solid 3px;
-//     height: 50%;
-//   }
+  .theImage {
+    font-size: 300px;
+  }
+
+  .image-body{
+    border: 4px solid yellow;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    position: relative;
+  }
+
+  .under-space {
+    width: 100%;
+    background-color: #8d4502;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: #8d4502 solid 3px;
+    height: 10%;
+  }
+
+  .reservation-comments {
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    width: 50%;
+    margin: auto auto;
+  }
+
+  .reservation-h2 {
+    text-align: center;
+  }
+
+  .add-reservation {
+    text-align: center;
+    margin-top: 100px;
+  }
+
+  .reservation-date-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .label-it {
+    width: 150px;
+  }
+
+  .reservation-enddate-input, .reservation-startdate-input, .reservation-name-input {
+    width: 200px;
+  }
+
+.make-submit {
+    width: 70px;
+}
