Set test for comments counter and finished up styling

--- a/src/style.scss
+++ b/src/style.scss
@@ -151,6 +151,8 @@ footer {
   background-color: #fff;
   padding: 16px;
   width: 90%;
+  overflow-y: scroll;
+  max-height: 80%;
 }
   
 .modal.active {
@@ -165,9 +167,29 @@ footer {
     border-bottom: 1px solid black; 
   }
   
-  .modal-header .title {
-    font-size: 1.25rem;
+  .modal-header * {
+    font-size: 1.5rem;
     font-weight: bold;
+    color: #8d4502;
+    font-family: "Crete Round", sans-serif;
+  }
+  .comment-container h3, .comment-form h3{
+    text-align: center;
+    color: #e06e04;
+    font-size: 1.25rem;
+    font-family: "Roboto", sans-serif;
+    margin: 15px auto;
+  }
+  .modal p {
+    font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  }
+  .comment-username{
+    color:#5799ef;
+    font-weight: 800;
   }
   
   .modal-header .close-button {
@@ -178,7 +200,35 @@ footer {
     font-size: 1.25rem;
     font-weight: bold;
   }
-  
+
+  .comment-form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+.comment-form button{
+  width: 100px;
+  background-color: #5799ef;
+  border: none;
+  padding: 5px;
+  color: $color-white;
+}
+
+.comment-form button:active{
+  color: #aeaeae;
+  background-color: #00008b;
+}
+.comment-form input {
+  width: 100%;
+}
+
+.comment-form textarea {
+  width: 100%;
+  height: 200px;
+}
+
   .modal-body {
     padding: 10px 15px;
   }
