--- a/src/style.scss
+++ b/src/style.scss
@@ -364,6 +364,7 @@ margin-bottom: 100px;
 		font-weight: bold;
 	}
 }
+
 .comment-container {
 	h3 {
 		text-align: center;
@@ -404,7 +405,11 @@ margin-bottom: 100px;
 		width: 100%;
 		height: 200px;
 	}
+
+
 }
+
+
 .comment-username {
 	color: #5799ef;
 	font-weight: 800;
@@ -430,4 +435,107 @@ margin-bottom: 100px;
 .overlay.active {
 	opacity: 1;
 	pointer-events: all;
+}
+
+// ReserverModal
+
+.modal-resever {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(0);
+	transition: 200ms ease-in-out;
+	border: 1px solid #dfe1e6;
+	border-radius: 10px;
+	z-index: 10;
+	background-color: #fff;
+	padding: 16px;
+	width: 90%;
+	overflow-y: scroll;
+	max-height: 80%;
+	p {
+		font-family: "Poppins", sans-serif;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 24px;
+	}
+}
+.modal-resever.active {
+	transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-reserver-header {
+	padding: 10px 15px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-bottom: 1px solid black;
+	* {
+		font-size: 1.5rem;
+		font-weight: bold;
+		color: #8d4502;
+		font-family: "Crete Round", sans-serif;
+	}
+	.close-reservation-button {
+		cursor: pointer;
+		border: none;
+		outline: none;
+		background: none;
+		font-size: 1.25rem;
+		font-weight: bold;
+	}
+}
+
+.modal-reservation-body {
+	padding: 10px 15px;
+	img {
+		display: block;
+		margin: 10px auto;
+    width: 500px;
+    height:  500px;
+    border-radius: 30px;
+	}
+}
+
+
+.reservation-container {
+	h3 {
+		text-align: justify;
+		color: #e06e04;
+		font-size: 1.25rem;
+		font-family: "Roboto", sans-serif;
+		margin: 15px auto;
+	}
+}
+
+
+.reservation-form {
+	h3 {
+		text-align: center;
+		color: #e06e04;
+		font-size: 1.25rem;
+		font-family: "Roboto", sans-serif;
+		margin: 15px auto;
+	}
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	justify-content: center;
+	align-items: center;
+	button {
+		width: 100px;
+		background-color: #5799ef;
+		border: none;
+		padding: 5px;
+		color: white;
+		&:active {
+			color: #aeaeae;
+			background-color: #00008b;
+		}
+	}
+	input {
+		width: 100%;
+    height: 40px;
+  }
 }
