--- a/src/style.scss
+++ b/src/style.scss
@@ -15,180 +15,83 @@ $color-orange-dure: #8d4502;
 /* styling navlist */
 #navlist {
   background-color: $color-blue;
-  position: absolute;
   width: 100%;
   position: fixed;
   z-index: 999;
-/* styling navlist anchor element */
+
+  /* styling navlist anchor element */
   a {
-    float:left;
+    float: left;
     display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 12px;
     text-decoration: none;
     font-size: 15px;
+
     &:hover {
       background-color: $color-white-dark;
       color: $color-orange-dure;
-      }
     }
-    
+  }
 }
 
-.navlist-right{
-    float:right;
+.navlist-right {
+  float: right;
 }
 
 /* styling search bar */
-.search input[type=text]{
-    width:300px;
-    height:25px;
-    border-radius:25px;
-    border: none;
-}
-     
-.search{
-    float:right;
-    margin:7px;
-}
-     
-.search button{
-    background-color: $color-blue;
-    color: #f2f2f2;
-    float: right;
-    padding: 5px 10px;
-    margin-right: 16px;
-    font-size: 12px;
-    border: none;
-    cursor: pointer;
+.search input[type=text] {
+  width: 300px;
+  height: 25px;
+  border-radius: 25px;
+  border: none;
 }
 
+.search {
+  float: right;
+  margin: 7px;
+}
+
+.search button {
+  background-color: $color-blue;
+  color: #f2f2f2;
+  float: right;
+  padding: 5px 10px;
+  margin-right: 16px;
+  font-size: 12px;
+  border: none;
+  cursor: pointer;
+}
 
 footer {
-    display: block;
-    width: 100%;
-    text-align: center;
-    padding: 1rem;
-    position: fixed;
-    bottom: 0;
-    background-color: $color-white-dark;
-    z-index: 2;
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 1rem;
+  position: fixed;
+  bottom: 0;
+  background-color: $color-white-dark;
+  z-index: 2;
 
-    .link {
-      margin-left: 1rem;
-      color: $color-orange-dure;
-    }
+  .link {
+    margin-left: 1rem;
+    color: $color-orange-dure;
   }
- 
-
-//   Reservation
-.reservation-body {
-    // width: 70vw;
-    padding: 50px;
-    // background-color: green;
-    // height: 120vh;
-    border: 2px solid transparent;
-margin-bottom: 100px;
-
-    // position: fixed;
-    margin: auto auto;
-// background-color: green;
-  // left: 10%;
-  // bottom: 5%;
-  display: none;
-//   z-index: 20;
-//   backdrop-filter: blur(2px);
-  }
-
-  .reservation-body.active {
-    display: block;
-  }
-
-  .closeBTN {
-    font-size: 40px;
-    cursor: pointer;
-  }
-
-  .closeBTNbody {
-    position: static;
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 50px;
-    // top: 10%;
-    // right: 16%;
-    // border: 3px blue solid;
-  }
-
-  .theImage {
-    width: 300px;
-    border-radius: 10px;
-  }
-
-  .image-body{
-    // border: 4px solid yellow;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 400px;
-    position: relative;
-  }
-
-  .under-space {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: #8d4502 solid 3px;
-    border-radius: 10px;
-  }
-
-  h3 .instruction-span {
-    color: #8d4502;
-    border: 5px solid green;
-  }
-
-  .instruction-reserve-h3 {
-    font-size: 20px;
-  }
-
-  .reservation-comments {
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    width: 50%;
-    margin: auto auto;
-  }
-
-  .reservation-h2 {
-    text-align: center;
-  }
-
-  .add-reservation {
-    text-align: center;
-    margin-top: 100px;
-  }
-
-  .reservation-date-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-
-  .label-it {
-    width: 150px;
-  }
-
-  .reservation-enddate-input, .reservation-startdate-input, .reservation-name-input {
-    width: 200px;
-  }
-
-.make-submit {
-    width: 70px;
 }
 
+.modal-body,
+.remodal-body {
+  padding: 10px 15px;
 
+  img {
+    display: block;
+    margin: 10px auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 20px;
+  }
+}
 
 // Main Page
 .product {
@@ -197,237 +100,264 @@ margin-bottom: 100px;
   text-align: center;
   padding-top: 60px;
   padding-bottom: 30px;
-  h2{
+
+  h2 {
     font-size: 40px;
     color: $color-orange;
     font-weight: 800;
   }
-  p{
+
+  p {
     font-size: 28px;
   }
-  .pro-container{
+
+  .pro-container {
     display: flex;
     justify-content: space-between;
     padding: 20px;
     flex-wrap: wrap;
-  .pro{
-    width: 20%;
-    min-width: 200px;
-    padding: 10px 12px;
-    border: 1px solid $color-orange;
-    border-radius: 20px;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.09);
-    margin: 15px 20px;
-    position: relative;
-    &:hover {
-      box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.18);
-    }
-    img {
-      width: 100%;
+
+    .pro {
+      width: 20%;
+      min-width: 200px;
+      padding: 10px 12px;
+      border: 1px solid $color-orange;
       border-radius: 20px;
+      box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.09);
+      margin: 15px 20px;
+      position: relative;
+
+      &:hover {
+        box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.18);
+      }
+
+      img {
+        width: 100%;
+        border-radius: 20px;
+      }
+
+      .button > i {
+        font-size: 1em;
+        border-radius: 0;
+        border: 0 solid transparent;
+        border-width: 0 0 0 0;
+        padding: 0 0 0 0;
+        margin: 0 0 0 0;
+        position: static;
+      }
+
+      .des {
+        text-align: start;
+        padding: 10px 0;
+
+        span {
+          color: $color-orange;
+          font-size: 12px;
+          font-weight: 600;
+        }
+
+        h5 {
+          padding-top: 7px;
+          color: $color-orange;
+          font-size: 14px;
+        }
+
+        i {
+          font-size: 12px;
+          color: $color-orange;
+        }
+
+        h4 {
+          padding-top: 7px;
+          font-size: 15px;
+          font-weight: 700;
+          color: $color-orange;
+        }
+      }
+
+      .like {
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        border-radius: 50px;
+        background-color: $color-white-dark;
+        color: $color-blue;
+        border: 1px solid $color-blue;
+        position: absolute;
+        bottom: 20px;
+        right: 15px;
+        cursor: pointer;
+      }
     }
-    .des {
-      text-align: start;
-      padding: 10px 0;
-      span{
-        color: $color-orange;
-        font-size: 12px;
-        font-weight: 600;
-      }
-      h5{
-        padding-top: 7px;
-        color: $color-orange;
-        font-size: 14px;
-      }
-      i {
-        font-size: 12px;
-        color: $color-orange;
-      }
-      h4 {
-        padding-top: 7px;
-        font-size: 15px;
-        font-weight: 700;
-        color: $color-orange;
-      }
-    }
-    .like {
-      width: 40px;
-      height: 40px;
-      line-height: 40px;
-      border-radius: 50px;
-      background-color: $color-white-dark;
-      color: $color-blue;
-      border: 1px solid $color-blue;
-      position: absolute;
-      bottom: 20px;
-      right: 15px;
+  }
+
+  //button
+  .button-cont {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .button {
+      margin-bottom: 15px;
+      backface-visibility: hidden;
+      position: relative;
       cursor: pointer;
+      display: inline-block;
+      white-space: nowrap;
+      background: linear-gradient(180deg, #fea 0%, #dc8 49%, #a95 51%, #dc8 100%);
+      border-radius: 5px;
+      border: 1px solid #ba6;
+      border-width: 1px 1px 1px 1px;
+      padding: 10px 20px 10px 20px;
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 1), 0 1px 3px rgba(0, 0, 0, 0.3);
+      color: #fff;
+      font-size: 16px;
+      font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-weight: 900;
+      font-style: normal;
+      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    }
+
+    .button > div {
+      color: #999;
+      font-size: 10px;
+      font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-weight: initial;
+      font-style: normal;
+      text-align: center;
+      margin: 0 0 0 0;
+    }
+
+    .button > .ld {
+      font-size: initial;
     }
   }
 }
 
+.modal,
+.remodal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid #dfe1e6;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: #fff;
+  padding: 16px;
+  width: 90%;
+  overflow-y: scroll;
+  max-height: 80%;
 
-
-//button
-.button-cont{
-  display: flex;
-  align-items:center;
-  justify-content: center;
-  flex-direction: column;
-
-  .button {
-    margin-bottom: 15px;
-    backface-visibility: hidden;
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-    white-space: nowrap;
-    background: linear-gradient(180deg,#fea 0%,#dc8 49%,#a95 51%,#dc8 100%);
-    border-radius: 5px;
-    border: 1px solid #ba6;
-    border-width: 1px 1px 1px 1px;
-    padding: 10px 20px 10px 20px;
-    box-shadow: inset 0px 1px 0px rgba(255,255,255,1),0px 1px 3px rgba(0,0,0,0.3);
-    color: #fff;
+  p {
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    font-weight: 400;
     font-size: 16px;
-    font-family: Helvetica Neue;
-    font-weight: 900;
-    font-style: normal;
-    text-shadow: 0px -1px 0px rgba(0,0,0,0.4)
+    line-height: 24px;
   }
-  .button > div {
-    color: #999;
-    font-size: 10px;
-    font-family: Helvetica Neue;
-    font-weight: initial;
-    font-style: normal;
+}
+
+.modal.active,
+.remodal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header,
+.remodal-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+
+  * {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #8d4502;
+    font-family: "Crete Round", sans-serif;
+  }
+
+  .close-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
+}
+
+.comment-container,
+.recomment-container {
+  h3 {
     text-align: center;
-    margin: 0px 0px 0px 0px
-  }
-  .button > i {
-    font-size: 1em;
-    border-radius: 0px;
-    border: 0px solid transparent;
-    border-width: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    position: static
-  }
-  .button > .ld {
-    font-size: initial
+    color: #e06e04;
+    font-size: 1.25rem;
+    font-family: "Roboto", sans-serif;
+    margin: 15px auto;
   }
 }
+
+.comment-form,
+.recomment-form {
+  h3 {
+    text-align: center;
+    color: #e06e04;
+    font-size: 1.25rem;
+    font-family: "Roboto", sans-serif;
+    margin: 15px auto;
+  }
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+
+  button {
+    width: 100px;
+    background-color: #5799ef;
+    border: none;
+    padding: 5px;
+    color: white;
+
+    &:active {
+      color: #aeaeae;
+      background-color: #00008b;
+    }
+  }
+
+  input {
+    width: 100%;
+  }
+
+  textarea {
+    width: 100%;
+    height: 200px;
+  }
 }
-.modal, .remodal {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) scale(0);
-	transition: 200ms ease-in-out;
-	border: 1px solid #dfe1e6;
-	border-radius: 10px;
-	z-index: 10;
-	background-color: #fff;
-	padding: 16px;
-	width: 90%;
-	overflow-y: scroll;
-	max-height: 80%;
-	p {
-		font-family: "Poppins", sans-serif;
-		font-style: normal;
-		font-weight: 400;
-		font-size: 16px;
-		line-height: 24px;
-	}
-}
-.modal.active, .remodal.active {
-	transform: translate(-50%, -50%) scale(1);
-}
-.modal-header, .remodal-header {
-	padding: 10px 15px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	border-bottom: 1px solid black;
-	* {
-		font-size: 1.5rem;
-		font-weight: bold;
-		color: #8d4502;
-		font-family: "Crete Round", sans-serif;
-	}
-	.close-button {
-		cursor: pointer;
-		border: none;
-		outline: none;
-		background: none;
-		font-size: 1.25rem;
-		font-weight: bold;
-	}
-}
-.comment-container, .recomment-container {
-	h3 {
-		text-align: center;
-		color: #e06e04;
-		font-size: 1.25rem;
-		font-family: "Roboto", sans-serif;
-		margin: 15px auto;
-	}
-}
-.comment-form, .recomment-form {
-	h3 {
-		text-align: center;
-		color: #e06e04;
-		font-size: 1.25rem;
-		font-family: "Roboto", sans-serif;
-		margin: 15px auto;
-	}
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-	justify-content: center;
-	align-items: center;
-	button {
-		width: 100px;
-		background-color: #5799ef;
-		border: none;
-		padding: 5px;
-		color: white;
-		&:active {
-			color: #aeaeae;
-			background-color: #00008b;
-		}
-	}
-	input {
-		width: 100%;
-	}
-	textarea {
-		width: 100%;
-		height: 200px;
-	}
-}
+
 .comment-username {
-	color: #5799ef;
-	font-weight: 800;
+  color: #5799ef;
+  font-weight: 800;
 }
-.modal-body, .remodal-body {
-	padding: 10px 15px;
-	img {
-		display: block;
-		margin: 10px auto;
-	}
-}
+
 .overlay {
-	position: fixed;
-	opacity: 0;
-	transition: 200ms ease-in-out;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: rgba(0, 0, 0, 0.5);
-	pointer-events: none;
+  position: fixed;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
 }
+
 .overlay.active {
-	opacity: 1;
-	pointer-events: all;
+  opacity: 1;
+  pointer-events: all;
 }
